--- a/Backend/StockWise.Tests.Api/StockWise.Tests.Api.csproj
+++ b/Backend/StockWise.Tests.Api/StockWise.Tests.Api.csproj
@@ -20,6 +20,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="FluentAssertions" Version="8.8.0" />
+		<PackageReference Include="Microsoft.AspNet.Identity.Core" Version="2.2.4" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.8" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.8" />
